# warehouse

./: .gitignore  LICENSE  Makefile  Taskfile.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml
.repo/: rules.toml
scripts/: run_cli_stub.sh
src/application/content/: included.py
src/template/: utils.py
src/template/content/: htmlfiles.py  jsfiles.py
src/template/ops/: zipops.py
src/warehouse/: app.py  config.py  core.py  settings.py
src/warehouse/content/: cssfiles.py
src/warehouse/datatransfer/calls/: rpc.py  ssh.py
src/warehouse/ops/: zipops.py
src/warehouse/ux/: cli.py
tests/: test_cmd_info.py
